--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   ],
   "dependencies": {
     "yeoman-generator": "^1.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/slarsendisney/generator-sld"
   }
 }
