--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "generator-sld",
-  "version": "1.0.4",
-  "description": "A generator that clones, installs and starts my GatsbyJS boilerplates.",
+  "version": "1.0.6",
+  "description": "Need a GatsbyJS boilerplate? Look no further.",
   "author": "Sam Larsen-Disney <s.larsendisney@gmail.com>",
   "files": [
     "generators"
   ],
   "keywords": [
     "yeoman-generator",
+    "gatsby",
+    "boilerplate",
+    "starter",
+    "react",
     "sld"
   ],
   "dependencies": {
-    "yeoman-generator": "^1.1.1"
+    "yeoman-generator": "^4.1.0"
   },
   "repository": {
     "type": "git",
